--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -191,7 +191,7 @@
       </div>
       <div class="modal-footer">
           <p>If a potion you searched for is not supported, or if there is some error, contact me through Github and I will see about adding it.</p>
-          <a href="https://github.com/morganchafe/PotionChain" target="_blank" rel="noopener" class="btn btn-primary">Github</a>
+          <a href="https://github.com/Tiamtum/PotionChain" target="_blank" rel="noopener" class="btn btn-primary">Github</a>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
